--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.3.1",
-    "morgan": "^1.10.0"
+    "knex": "^0.21.15",
+    "morgan": "^1.10.0",
+    "pg": "^8.5.1",
+    "xss": "^1.0.8"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
+    "postgrator-cli": "^4.0.0",
     "supertest": "^6.0.1"
   }
 }
