--- a/package.json
+++ b/package.json
@@ -11,24 +11,29 @@
     "migrate": "postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
     "start": "node src/server.js"
+  }, "engines": {
+    "node": "12.19.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.3.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.15",
     "morgan": "^1.10.0",
-    "pg": "^8.5.1",
+    "path": "^0.12.7",
+    "pg": "^7.18.2",
+    "postgrator-cli": "^4.0.0",
     "xss": "^1.0.8"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
-    "postgrator-cli": "^4.0.0",
     "supertest": "^6.0.1"
   }
 }
